# CUDA-basic-operator

./: README.md
10gelu/: 10-1.gelu_FP16_1.cu  10-2.gelu_FP16_2.cu  CMakeLists.txt
11fused_bias_mask_scale_and_add/: 11-1.fused_bias_mask_scale_and_add_fp32.cu  CMakeLists.txt
12softmax/: CMakeLists.txt  softmax_v0.cu  softmax_v1.cu  softmax_v2.cu  softmax_v3.cu
13measure_GPU_peak_perf/: 13-1.measure_GPU_peak_perf.cu  13-2.measure_GPU_peak_perf.cu  13.measure_GPU_peak_perf.cu  CMakeLists.txt
15quantize/: 15-1.quantize_pertensor.cu  15-2.quantize_perchannel.cu  15.quantize.cu  CMakeLists.txt
16-1GEMV/: 16.MatVec.cu  16_gemv.cuh  CMakeLists.txt
17Dropdout/: 17.dropout.cu  CMakeLists.txt
1hellocuda/: 1.hellocuda.cu  CMakeLists.txt
3vectorAdd/: 3-1.vectorAdd.cu
5reduce_kernel/: CMakeLists.txt  baseline.cu  reduce_v0.cu  reduce_v1.cu  reduce_v1_old.cu  reduce_v2.cu  reduce_v3.cu  reduce_v4.cu  reduce_v5.cu  reduce_v6.cu  reduce_v7.cu  reduce_v8.cu
8histogram/: 8-1.histogram.cu  8-2.histogram.cu  CMakeLists.txt
9copy_if/: 9.copy-if.cu  CMakeLists.txt
Elementwise/: CMakeLists.txt  elementwise_baseline.cu  elementwise_dotmul_baseline.cu  elementwise_dotmul_baseline_v1.cu  elementwise_dotmul_v1.cu  elementwise_relu_baseline.cu  elementwise_relu_v1.cu  elementwise_relu_v2.cu  elementwise_relu_v3.cu
Elementwise/Elementwise_note/: Elementwise优化过程.md
Elementwise/Elementwise_note/.obsidian/: workspace.json
Elementwise/Elementwise_note/Elementwise/: Elementwise优化过程.md
Elementwise/Elementwise_note/Elementwise/.obsidian/: workspace.json
Elementwise/compute/elementwise/: elementwise.ncu-proj
FastAtomicAdd/: CMakeLists.txt  fastatomicadd_baseline.cu  fastatomicadd_v1.cu
FastAtomicAdd/FastAtomicAdd_note/: FastAtomicAdd优化.md
FastAtomicAdd/FastAtomicAdd_note/.obsidian/: workspace.json
FastAtomicAdd/compute/FastAtomicAdd/: FastAtomicAdd.ncu-proj
Reduce/: CMakeLists.txt  reduce_baseline.cu  reduce_v1_interleaved_addressing.cu  reduce_v2_bank_conflict.cu  reduce_v3_Idel_thread.cu  reduce_v4_unrolling_the_last_warp.cu  reduce_v5_complete_unrolling.cu  reduce_v6.0_grid&block_size.cu  reduce_v6.1_grid&block_size.cu  reduce_v6.2_grid&block_size.cu  reduce_v7_shfl_down_sync.cu
Reduce/Reduce_note/: Reduce优化过程.md
Reduce/Reduce_note/.obsidian/: workspace.json
Reduce/compute/reduce/: reduce.ncu-proj
UpsampleNearst/: CMakeLists.txt  upsamplenearest_v1.cu  upsamplenearest_v2.cu  upsamplenearest_v3.cu  upsamplenearest_v4.cu  upsampling.py
UpsampleNearst/UpsampleNearest_note/: UpsampleNearest优化笔记.md
UpsampleNearst/UpsampleNearest_note/.obsidian/: workspace.json
UpsampleNearst/compute/: upsampling.ncu-rep
